--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -17,6 +18,7 @@
     "react-waypoint": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
